--- a/_examples/experimental/emulation/index.html
+++ b/_examples/experimental/emulation/index.html
@@ -153,7 +153,7 @@
                     } else {
                         clientID = null;
                     }
-                    const inputText = ctx.data["input"].toString();
+                    const inputText = ctx.data["input"].toString() + '  (offset: ' + ctx.offset + ')';
                     const text = safeTagsReplace(inputText) + ' <span class="muted">from ' + clientID + '</span>';
                     drawText(text);
                 }
