support batch of commands as initial request in emulation transports

--- a/_examples/experimental/emulation/index.html
+++ b/_examples/experimental/emulation/index.html
@@ -31,7 +31,7 @@
                     },
                     {
                         transport: 'sse',
-                        endpoint: `//${window.location.host}connection/sse`
+                        endpoint: `//${window.location.host}/connection/sse`
                     },
                 ];
                 const centrifuge = new Centrifuge(transports);
